# ssh-proxy-tray

./: .gitignore  README.md  README_ru.md  build.sh  meson.build
debian/: changelog  control  copyright  rules  ssh-proxy-tray.desktop  ssh-proxy-tray.install
src/: main.cpp  meson.build
